# localizer-renderer

./: CMakeLists.txt  README
src/: CMakeLists.txt  renderer_localizer.c
